dig-src/main/default/objects/DIG_Emission__c/DIG_Emission__c.object-meta.xml
<CustomObject>
    <description>Durable sink for DIG emission events (evidence, audit, replay)</description>
    <label>DIG Emission</label>
    <nameField>
        <label>DIG Emission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DIG Emissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>