dig-src/main/default/objects/DIG_Emission__c/fields/Anomaly__c.field-meta.xml
<CustomField>
    <fullName>Anomaly__c</fullName>
    <label>Anomaly</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>