dig-src/main/default/objects/DIG_Emission__c/fields/AnomalyReason__c.field-meta.xml
<CustomField>
    <fullName>AnomalyReason__c</fullName>
    <label>Anomaly Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>