dig-src/main/default/objects/DIG_Emission__c/fields/At__c.field-meta.xml
<CustomField>
    <fullName>At__c</fullName>
    <label>At</label>
    <type>DateTime</type>
</CustomField>