dig-src/main/default/objects/DIG_Emission__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <label>Idempotency Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>