dig-src/main/default/objects/DIG_Emission__c/fields/IngestedAt__c.field-meta.xml
<CustomField>
    <fullName>IngestedAt__c</fullName>
    <label>Ingested At</label>
    <type>DateTime</type>
</CustomField>