dig-src/main/default/objects/DIG_Emission__c/fields/ReplayHint__c.field-meta.xml
<CustomField>
    <fullName>ReplayHint__c</fullName>
    <label>Replay Hint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>