dig-src/main/default/objects/DIG_Emission__c/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <label>Run Id</label>
    <externalId>true</externalId>
    <length>64</length>
    <type>Text</type>
</CustomField>